--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - uses: dtolnay/rust-toolchain@stable
+      - uses: Swatinem/rust-cache@v2
+        with:
+          prefix-key: publish
+          shared-key: stable
       - env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CRATESIO }}
         run: |
