--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,8 +19,8 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
         with:
-          prefix-key: publish
-          shared-key: stable
+          shared-key: ubuntu-latest-stable
+          save-if: false
       - env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CRATESIO }}
         run: |
