#17 feat: lock-free parallel training with local voting tallies
- Add parallel_training module with cache-aligned atomic tallies
- Implement ICML 2021 massively parallel TM architecture
- Use CachePadded<AtomicI64> to prevent false sharing
- Scaled integer voting for atomic f32 accumulation
- Bitmap-based firing tracking for O(1) lookup
- Add ParallelBatch and LocalTally types
- Add ClauseBank::train_parallel method
- Integration tests for parallel training

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ categories = ["science", "algorithms"]
 default = ["std"]
 std = []
 simd = ["std"]
-parallel = ["std", "rayon"]
+parallel = ["std", "rayon", "crossbeam-utils"]
 serde = ["dep:serde"]
 full = ["simd", "parallel", "serde"]
 
@@ -37,6 +37,10 @@ features = ["derive"]
 
 [dependencies.rayon]
 version = "1"
+optional = true
+
+[dependencies.crossbeam-utils]
+version = "0.8"
 optional = true
 
 [dev-dependencies]
