--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tsetlin-rs"
-version = "0.1.0"
+version = "0.2.2"
 edition = "2024"
 rust-version = "1.92"
 authors = ["RAprogramm <andrey.rozanov.vl@gmail.com>"]
@@ -19,7 +19,7 @@ categories = ["science", "algorithms"]
 default = ["std"]
 std = []
 simd = ["std"]
-parallel = ["std", "rayon"]
+parallel = ["std", "rayon", "crossbeam-utils"]
 serde = ["dep:serde"]
 full = ["simd", "parallel", "serde"]
 
@@ -37,6 +37,10 @@ features = ["derive"]
 
 [dependencies.rayon]
 version = "1"
+optional = true
+
+[dependencies.crossbeam-utils]
+version = "0.8"
 optional = true
 
 [dev-dependencies]
