--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ default = ["std"]
 std = []
 simd = ["std"]
 parallel = ["std", "rayon", "crossbeam-utils"]
-serde = ["dep:serde"]
+serde = ["dep:serde", "smallvec/serde"]
 full = ["simd", "parallel", "serde"]
 
 [dependencies]
@@ -29,6 +29,7 @@ rand = { version = "0.9", default-features = false, features = [
   "thread_rng",
 ] }
 rand_xoshiro = "0.7"
+smallvec = "1.15"
 
 [dependencies.serde]
 version = "1"
