#2 test: add comprehensive unit tests
- sparse.rs: accessors, evaluate_checked, SparseTM methods
- error.rs: Display and equality tests (100% coverage)
- model.rs: predict_batch default impl test
- multiclass.rs: full coverage with trait impl tests
- regression.rs: train_one, fit, mae tests (100% coverage)
- training.rs: FitOptions, FitResult tests (100% coverage)
- convolutional.rs: fit, evaluate, extract_patch tests (100% coverage)

Overall coverage: 91.86%

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,10 @@ proptest = "1"
 name = "benchmarks"
 harness = false
 
+[[bench]]
+name = "sparse_benchmarks"
+harness = false
+
 [[example]]
 name = "xor"
 
