--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tsetlin-rs"
-version = "0.2.2"
+version = "0.3.0"
 edition = "2024"
 rust-version = "1.92"
 authors = ["RAprogramm <andrey.rozanov.vl@gmail.com>"]
@@ -20,7 +20,7 @@ default = ["std"]
 std = []
 simd = ["std"]
 parallel = ["std", "rayon", "crossbeam-utils"]
-serde = ["dep:serde"]
+serde = ["dep:serde", "smallvec/serde"]
 full = ["simd", "parallel", "serde"]
 
 [dependencies]
@@ -29,6 +29,7 @@ rand = { version = "0.9", default-features = false, features = [
   "thread_rng",
 ] }
 rand_xoshiro = "0.7"
+smallvec = "1.15"
 
 [dependencies.serde]
 version = "1"
@@ -49,6 +50,10 @@ proptest = "1"
 
 [[bench]]
 name = "benchmarks"
+harness = false
+
+[[bench]]
+name = "sparse_benchmarks"
 harness = false
 
 [[example]]
