--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,11 +19,15 @@ jobs:
           ref: main
           fetch-depth: 0
 
-      - env:
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Create release
+        env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          # Get version from Cargo.toml
-          VERSION=$(grep -oP '^version\s*=\s*"\K[^"]+' Cargo.toml)
+          # Get version via cargo metadata (official, reliable)
+          VERSION=$(cargo metadata --format-version=1 --no-deps | jq -r '.packages[0].version')
           TAG="v$VERSION"
           echo "Version: $TAG"
 
