--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,8 +44,17 @@ jobs:
             echo "Created tag $TAG"
           fi
 
-          # Get full squash commit message (subject + body)
-          NOTES=$(git log -1 --pretty=format:"%B" HEAD)
+          # Extract release notes from CHANGELOG.md for this version
+          NOTES=$(awk -v tag="$TAG" '
+            $0 ~ "^## " tag { found=1; next }
+            found && /^## v[0-9]/ { exit }
+            found && /^---$/ { exit }
+            found { print }
+          ' CHANGELOG.md)
+
+          if [ -z "$NOTES" ]; then
+            NOTES="Release $TAG"
+          fi
 
           echo "Release notes:"
           echo "$NOTES"
